fix overlap with member entry on portrait/landscape Ipad

--- a/challenges/static/css/challenges.css
+++ b/challenges/static/css/challenges.css
@@ -107,9 +107,7 @@
 }
 
 /* member entry */
-.member-row .member {
-    border-bottom: 1px solid var(--gray-light);
-}
+
 
 .member-row:first-of-type {
     margin-top: -15px;
